# CMP_Scripts

./: .gitignore  README.md  SF_CMP_INRIX_Data_Sample_Size_Analysis.ipynb  SF_CMP_INRIX_Network_Conflation.py  color.py  infill_opportunity_zone.py  mtc_model_consistency.md  pyproject.toml
APC/: README.md  SF_CMP2021_Transit_APC_Volume_and_Speeds.py  SF_CMP2021_Transit_Coverage.ipynb  SF_CMP2021_Transit_Coverage.py  SF_CMP_Transit_APC_Speed_Revenue vs Stop Distance.py  SF_CMP_Transit_APC_Speeds.py  SF_CMP_Transit_APC_TripOver50%CMP_Based_Speeds.py  SF_CMP_Transit_APC_Volume.py  config_UK_2021.ini  config_sfcta_2017_10min.ini  config_sfcta_2017_5min.ini  config_sfcta_2018_5min.ini  config_sfcta_2019_10min.ini  config_sfcta_2019_5min.ini  config_sfcta_2019_all.ini  config_sfcta_2020_10min.ini  config_sfcta_2020_5min.ini  config_sfcta_2021.ini  config_sfcta_2021_5min.ini  transit_coverage.py  transit_coverage_multiple.py
Conflation/: README.md  SF_CMP_DTA_Network_Conflation.py  SF_CMP_INRIX_Network_Conflation.py  SF_CMP_INRIX_Network_Conflation_XD2001.py  cmp_inrix_network_conflation_vyy0x.toml
Counts/: _1_extract_adt_counts_2019.py  _2_proc_adt_counts.py  _2_proc_adt_counts_2019_hourly.py  _2_proc_adt_counts_2021.py  _3_proc_MTA_counts.py
INRIX/: SF_CMP2021_Auto_LOS_Reliability.py  SF_CMP_INRIX_Data_Auto_LOS.py  SF_CMP_INRIX_XD1902_Auto_LOS_2019_Adjusted.py  SF_CMP_INRIX_XD1902_Auto_LOS_2019_Difference_Adjusted.py  SF_INRIX_XD1902_Realtime.py  SF_INRIX_XD2002_Realtime.py  SF_INRIX_XD2101_Realtime.py  sf_inrix_xd_realtime.py
PeMS/: SF_CMP2021_PeMS_Volumes.ipynb  (+3 more)
(+105 files in other folders)
