[project]
name = "cmp-scripts"
version = "0.0.0"
description = "Data preparation scripts for SFCTA's Congestion Management Program (CMP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "fastexcel>=0.14.0",
    "fiona>=1.10.1",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "polars>=1.30.0",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "vl-convert-python>=1.8.0",
    "xlrd>=2.0.1",
]
